@@ -39,16 +39,17 @@ class EllipsisChecker(BaseChecker):
            For example: A function consisting of an ellipsis followed by a
            return statement on the next line.
         """
+        #breakpoint()
         if (
             node.pytype() == "builtins.Ellipsis"
             and not isinstance(
                 node.parent,
                 (
-                    nodes.Assign,
                     nodes.AnnAssign,
-                    nodes.Call,
                     nodes.Arguments,
-                    nodes.List,
+                    nodes.Assign,
+                    nodes.BaseContainer,
+                    nodes.Call,
                 ),
             )
             and (
